--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   <script src="//unpkg.com/prismjs/components/prism-javascript.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-markdown.js"></script>
-  <script src="//unpkg.com/docsify-plugin-flexible-alerts@1.0.4/dist/docsify-plugin-flexible-alerts.min.js"></script>
+  <!-- <script src="//unpkg.com/docsify-plugin-flexible-alerts@1.0.4/dist/docsify-plugin-flexible-alerts.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/docsify-plugin-flexible-alerts@1.1.0/dist/docsify-plugin-flexible-alerts.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="//unpkg.com/docsify-scroll-to-top/dist/docsify-scroll-to-top.min.js"></script>
   <!-- <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script> -->
