--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Advanced Java</title>
+  <title>Java 进阶笔记</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -16,10 +16,11 @@
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
-      name: 'Advanced Java',
+      name: 'Java 进阶笔记',
       // repo: 'https://github.com/beldon/dev-center-wiki',
 	  loadSidebar: true,
 	  loadNavbar: true,
+	  subMaxLevel: 4,
 	  // coverpage: true,
 	  auto2top: true,
 	  autoHeader: true,
