--- a/index.html
+++ b/index.html
@@ -6,42 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"> -->
     <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css"> -->
 	<!-- Theme: Simple Dark -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"> -->
-	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
 </head>
 <body>
   <div id="app">加载中</div>
-  <script>
-    window.$docsify = {
-      name: 'Java 进阶笔记',
-      // repo: 'https://github.com/beldon/dev-center-wiki',
-	  loadSidebar: true,
-	  loadNavbar: true,
-	  subMaxLevel: 4,
-	  // coverpage: true,
-	  auto2top: true,
-	  autoHeader: true,
-	  executeScript: true,
-	  mergeNavbar: true,
-	  search: 'auto',
-	  count:{
-	     countable:true,
-	     fontsize:'0.9em',
-	     color:'rgb(90,90,90)',
-	     language:'chinese'
-	  },
-	  scrollToTop: {
-	     auto: true,
-	     text: 'Top',
-	     right: 15,
-	     bottom: 15,
-	     offset: 200
-	  }
-    }
-  </script>
+  
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
@@ -59,11 +32,50 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-plugin-flexible-alerts@1.1.0/dist/docsify-plugin-flexible-alerts.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="//unpkg.com/docsify-scroll-to-top/dist/docsify-scroll-to-top.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.3/index.min.js"></script>
   <!-- <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script> -->
 <!--  <script>
     if (typeof navigator.serviceWorker !== 'undefined') {
       navigator.serviceWorker.register('sw.js')
     }
   </script> -->
+  
+  <script>
+    window.$docsify = {
+      name: 'Java 进阶笔记',
+      repo: 'https://github.com/beldon/advanced-java',
+  	  loadSidebar: true,
+  	  loadNavbar: true,
+  	  subMaxLevel: 4,
+  	  // coverpage: true,
+  	  auto2top: true,
+  	  autoHeader: true,
+  	  executeScript: true,
+  	  mergeNavbar: true,
+  	  search: 'auto',
+  	  count:{
+  	     countable:true,
+  	     fontsize:'0.9em',
+  	     color:'rgb(90,90,90)',
+  	     language:'chinese'
+  	  },
+  	  scrollToTop: {
+  	     auto: true,
+  	     text: 'Top',
+  	     right: 15,
+  	     bottom: 15,
+  	     offset: 200
+  	  },
+  	  plugins: [
+  	    EditOnGithubPlugin.create(
+  	         'https://github.com/beldon/advanced-java/edit/master/',
+  	         null,
+  	         function(file) {
+  	           return '编辑'
+  	         }
+  	    )
+  	  ]
+    }
+  </script>
 </body>
 </html>
