--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
   	           return '编辑'
   	         }
   	    )
-  	  ]
+  	  ],
+	  plantuml: {
+	    skin: 'classic',
+	  },
+	  footer: {
+	    copy: '<span>&copy; 2020</span>',
+	    auth: '',
+	    pre: '<hr/>',
+	    style: 'text-align: right;',
+	    class: 'className',
+	  }
     }
    </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
@@ -69,15 +79,20 @@
   <script src="//unpkg.com/prismjs/components/prism-markdown.js"></script>
   <!-- <script src="//unpkg.com/docsify-plugin-flexible-alerts@1.0.4/dist/docsify-plugin-flexible-alerts.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-plugin-flexible-alerts@1.1.0/dist/docsify-plugin-flexible-alerts.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="//unpkg.com/docsify-scroll-to-top/dist/docsify-scroll-to-top.min.js"></script>
+  <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
+  <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
+  <script src="//unpkg.com/mermaid/dist/mermaid.js"></script>
+  <script src="//unpkg.com/docsify-mermaid@latest/dist/docsify-mermaid.js" /> 
+  <script>mermaid.initialize({ startOnLoad: true });</script>
   <!-- <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script> -->
   <!--  <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
         navigator.serviceWorker.register('sw.js')
       }
     </script> -->
-  
   </script>
 </body>
 </html>
