--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<!-- Theme: Simple Dark -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"> -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> -->
+	
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="app">加载中</div>
@@ -58,7 +60,7 @@
 	    skin: 'classic',
 	  },
 	  footer: {
-	    copy: '<div><span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span><div> <span>&copy; 2020</span>',
+	    copy: '<span>&copy; 2020</span>',
 	    auth: '',
 	    pre: '<hr/>',
 	    style: 'text-align: right;',
@@ -107,7 +109,7 @@
 	        "若要转载或引用请务必保留原文链接，并申明来源。如果你觉得本仓库不错，那就来 Github 给个 star 吧 😊", 
 	        "success"); };
 	  </script>
-	  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+	  <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
   </script>
 </body>
 </html>
