--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Java 进阶笔记</title>
+  <title>🍀Java 进阶笔记</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -23,7 +23,7 @@
 
   <script>
     window.$docsify = {
-      name: 'Java 进阶笔记',
+      name: '🍀Java 进阶笔记',
       repo: 'https://github.com/beldon/advanced-java',
   	  loadSidebar: true,
   	  loadNavbar: true,
