--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	  <script>
 	    document.body.oncopy = function () { 
 	      swal("复制成功 🎉", 
-	        "若要转载或引用请务必保留原文链接，并申明来源。如果你觉得本仓库不错，那就来 Github 给个 star 吧 😊", 
+	        "如果你觉得本仓库不错，那就来 Github 给个 star 吧 😊", 
 	        "success"); };
 	  </script>
 	  <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
